--- a/scss/style.css
+++ b/scss/style.css
@@ -1781,6 +1781,15 @@ body .style_main .style_media_sc .container_media .grid_sc .sc1_how a:hover {
   background-color: white;
 }
 
+body .style_main .style_media_sc .container_media .grid_sc .sc1_how a .content_sc {
+  width: 100%;
+  padding: 16px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 2px 0px 0px;
+}
+
 body .style_main .style_media_sc .container_media .grid_sc .sc1_how a .content_sc p {
   color: white;
   -webkit-transition: color 200ms linear 0ms;
@@ -1816,6 +1825,15 @@ body .style_main .style_media_sc .container_media .grid_sc .sc2_evolving a {
 
 body .style_main .style_media_sc .container_media .grid_sc .sc2_evolving a:hover {
   background-color: white;
+}
+
+body .style_main .style_media_sc .container_media .grid_sc .sc2_evolving a .content_sc {
+  width: 100%;
+  padding: 16px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 2px 0px 0px;
 }
 
 body .style_main .style_media_sc .container_media .grid_sc .sc2_evolving a .content_sc p {
@@ -1855,6 +1873,15 @@ body .style_main .style_media_sc .container_media .grid_sc .sc3_designing a:hove
   background-color: white;
 }
 
+body .style_main .style_media_sc .container_media .grid_sc .sc3_designing a .content_sc {
+  width: 100%;
+  padding: 16px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 2px 0px 0px;
+}
+
 body .style_main .style_media_sc .container_media .grid_sc .sc3_designing a .content_sc p {
   color: white;
   -webkit-transition: color 200ms linear 0ms;
@@ -1890,6 +1917,15 @@ body .style_main .style_media_sc .container_media .grid_sc .sc4_designing a {
 
 body .style_main .style_media_sc .container_media .grid_sc .sc4_designing a:hover {
   background-color: white;
+}
+
+body .style_main .style_media_sc .container_media .grid_sc .sc4_designing a .content_sc {
+  width: 100%;
+  padding: 16px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 2px 0px 0px;
 }
 
 body .style_main .style_media_sc .container_media .grid_sc .sc4_designing a .content_sc p {
